[package]
name = "matchit"
version = "0.4.2"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2018"
description = "A blazing fast URL router and path matcher."
categories = ["network-programming", "algorithms"]
keywords = ["router", "path", "tree", "match", "url"]
repository = "https://github.com/ibraheemdev/matchit"
readme = "README.md"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
tower-service = "0.3.1"
# None :)

[dev-dependencies]
# Benchmarks
criterion = { version = "0.3.4", features = ["async_tokio"] }
axum = "0.1.1"
actix-router = "0.2.7"
regex = "1.5.4"
route-recognizer = "0.3.0"
gonzales = "0.0.3-beta"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
